FPLA-3229: Integrate with Fortify